// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recursiveFetchImports should follow dynamic renames in imports 1`] = `
Array [
  Object {
    "contents": Array [],
    "key": "testFinal.testImportTwo",
    "name": Array [
      Object {
        "tag": "String",
        "value": "StubFoo",
      },
    ],
    "render": Array [],
    "tag": "Room",
  },
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "from": "testNonImportTwo",
        "key": "testNonImportTwo#testFinal.testImportTwo",
        "name": "test exit",
        "tag": "Exit",
        "to": "testFinal.testImportTwo",
      },
    ],
    "key": "testNonImportTwo",
    "name": Array [],
    "render": Array [],
    "tag": "Room",
  },
  Object {
    "contents": Array [],
    "key": "testFinal.testImportTwo",
    "name": Array [],
    "render": Array [],
    "tag": "Room",
  },
]
`;

exports[`recursiveFetchImports should import multilevel and avoid colliding stub names 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "from": "testImportThree",
        "key": "testImportThree#testImportAssetThree.stub",
        "name": "test exit",
        "tag": "Exit",
        "to": "testImportAssetThree.stub",
      },
    ],
    "key": "testImportThree",
    "name": Array [],
    "render": Array [],
    "tag": "Room",
  },
  Object {
    "contents": Array [],
    "key": "testImportAssetTwo.stub",
    "name": Array [
      Object {
        "tag": "String",
        "value": "Asset Three",
      },
    ],
    "render": Array [],
    "tag": "Room",
  },
  Object {
    "contents": Array [],
    "key": "testImportAssetThree.stub",
    "name": Array [
      Object {
        "tag": "String",
        "value": "AssetThreeStub",
      },
    ],
    "render": Array [],
    "tag": "Room",
  },
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "from": "testImportThree",
        "key": "testImportThree#testImportAssetTwo.stub",
        "name": "test exit",
        "tag": "Exit",
        "to": "testImportAssetTwo.stub",
      },
    ],
    "key": "testImportThree",
    "name": Array [],
    "render": Array [
      Object {
        "tag": "String",
        "value": "Asset Two",
      },
    ],
    "tag": "Room",
  },
  Object {
    "contents": Array [],
    "key": "testImportAssetTwo.stub",
    "name": Array [],
    "render": Array [],
    "tag": "Room",
  },
  Object {
    "contents": Array [],
    "key": "testImportThree",
    "name": Array [],
    "render": Array [],
    "tag": "Room",
  },
]
`;

exports[`recursiveFetchImports should recursive fetch one level of element and stubs when passed import key 1`] = `
Array [
  Object {
    "contents": Array [],
    "key": "testImportOne",
    "name": Array [],
    "render": Array [
      Object {
        "tag": "String",
        "value": "One",
      },
    ],
    "tag": "Room",
  },
  Object {
    "contents": Array [],
    "key": "testFinal.testImportStubOne",
    "name": Array [
      Object {
        "tag": "String",
        "value": "StubTwo",
      },
    ],
    "render": Array [],
    "tag": "Room",
  },
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "from": "testImportOne",
        "key": "testImportOne#testFinal.testImportStubOne",
        "name": "test exit one",
        "tag": "Exit",
        "to": "testFinal.testImportStubOne",
      },
    ],
    "key": "testImportOne",
    "name": Array [],
    "render": Array [
      Object {
        "tag": "String",
        "value": "Two",
      },
    ],
    "tag": "Room",
  },
  Object {
    "contents": Array [],
    "key": "testFinal.testImportStubOne",
    "name": Array [],
    "render": Array [],
    "tag": "Room",
  },
]
`;

exports[`recursiveFetchImports should return element and stubs when passed non-import key 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "from": "testNonImport",
        "key": "testNonImport#testFinal.testNonImportStub",
        "name": "test exit",
        "tag": "Exit",
        "to": "testFinal.testNonImportStub",
      },
    ],
    "key": "testNonImport",
    "name": Array [],
    "render": Array [
      Object {
        "tag": "String",
        "value": "DescriptionOne",
      },
    ],
    "tag": "Room",
  },
  Object {
    "contents": Array [],
    "key": "testFinal.testNonImportStub",
    "name": Array [
      Object {
        "tag": "String",
        "value": "StubOne",
      },
    ],
    "render": Array [],
    "tag": "Room",
  },
]
`;
